--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,7 @@
 
 <body>
   <main>
-    <h1>🎉 Fun Test Page 🎉</h1>
+    <h1>🎉 Fun Page 🎉</h1>
 
     <div class="container">
       <div class="counter">
